SET(LIB_NAME math)

SET(HEADER_PATH ${COTOON_HEADER_PATH}/${LIB_NAME})
SET(SOURCE_PATH ${COTOON_SOURCE_PATH}/${LIB_NAME})

SET(MATH_LIST
    ${HEADER_PATH}/mathutil.h
    ${SOURCE_PATH}/mathutil.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${MATH_LIST})

ADD_DEFINITIONS(-D_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} SHARED ${MATH_LIST})

IF(BUILD_PLATFORM_ANDROID)
    TARGET_LINK_LIBRARIES (${LIB_NAME} PRIVATE m)
ENDIF()

SET_TARGET_ATTRIBUTE(${LIB_NAME} "core")